# xingtuihutong

./: .gitignore  README.md  package-lock.json  package.json  project.config.json  project.private.config.json  start-backend.bat  start-backend.ps1  start.ps1
backend/: .env.example  Cargo.toml  README.md
backend/admin/: agent.js  app.js  index.html  styles.css
backend/migrations/: 0001_initial.sql  0002_agent_analytics.sql  0003_agent_action_dedup.sql  0004_agent_settings.sql  0005_agent_settings_extra.sql  0006_onboarding_workflow.sql  0007_match_request_brief.sql  0008_creator_work_upload.sql  0009_demand_proposals_bilateral_chat.sql  0010_agent_model_endpoint.sql  0011_admin_config_indexes.sql  0012_feature_batch.sql  0013_reports_indexes.sql  0014_banners.sql
backend/public/: index.html
backend/src/: admin.rs  admin_agent.rs  agent.rs  analytics.rs  api.rs  banners.rs  config.rs  db.rs  demands.rs  error.rs  main.rs  models.rs  reports.rs
miniprogram/: app.json  app.scss  app.ts  config.ts  welcome-fields.css
miniprogram/components/banner-swiper/: banner-swiper.scss  banner-swiper.ts  banner-swiper.wxml
miniprogram/components/data-state/: data-state.scss  data-state.ts  data-state.wxml
miniprogram/components/navigation-bar/: navigation-bar.scss  navigation-bar.ts  navigation-bar.wxml
miniprogram/components/page-header/: page-header.scss  page-header.ts  page-header.wxml
miniprogram/components/tab-bar/: tab-bar.scss  tab-bar.ts  tab-bar.wxml
miniprogram/custom-tab-bar/: index.scss  index.ts
miniprogram/utils/: api.ts
typings/: index.d.ts
(+58 files in other folders)
