[package]
name = "xingtuihutong-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
argon2 = "0.5.3"
axum = { version = "0.8.1", features = ["json", "macros", "multipart"] }
chrono = { version = "0.4.39", features = ["serde"] }
dotenvy = "0.15.7"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"
reqwest = { version = "0.12.15", default-features = false, features = ["json", "rustls-tls"] }
sqlx = { version = "0.8.3", features = ["runtime-tokio", "sqlite", "migrate", "chrono", "uuid"] }
thiserror = "2.0.9"
tokio = { version = "1.42.0", features = ["macros", "rt-multi-thread", "net", "signal", "fs"] }
tower-http = { version = "0.6.2", features = ["cors", "fs", "trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
uuid = { version = "1.11.0", features = ["v4", "serde"] }
